--- a/index.html
+++ b/index.html
@@ -143,27 +143,7 @@
     .page{ width: 50%; padding: 14px; box-sizing: border-box; }
 
     .actions{ display:flex; gap: 10px; align-items:center; justify-content: space-between; margin-bottom: 10px; }
-    .list-card{
-      height: var(--list-h); overflow-y: auto; overscroll-behavior: contain;
-      border: 1px solid var(--border); border-radius: var(--radius-sm); background: rgba(20, 24, 30, 0.55);
-    }
-
-    /* ===== Строки ===== */
-    .row{
-      display:grid; grid-template-columns: 64px 160px 1fr 1fr 160px 180px;
-      gap: 10px; padding: 10px 12px; align-items:center; border-bottom: 1px dashed var(--border);
-    }
-    .row.head{
-      position: sticky; top: 0; background: rgba(8,10,14,0.9); border-bottom: 1px solid var(--border);
-      z-index: 1; font-size: 12px; color: var(--muted); text-transform: uppercase; letter-spacing: .6px;
-    }
-    .field{
-      height: var(--input-h); border-radius: 10px; border: 1px solid var(--border);
-      background: rgba(255,255,255,0.06); color: var(--text); padding: 0 12px; font-size: 14px; outline: none;
-    }
-    .field[readonly]{ opacity:.85 }
-    .field.short{ text-align: center; }
-
+    
     /* ===== Модал создания ===== */
     .modal{ position: fixed; inset:0; display:none; align-items:center; justify-content:center; background: rgba(0,0,0,0.55); z-index: 9000; }
     .modal.open{ display:flex; }
@@ -176,15 +156,6 @@
     .grid{ display:grid; grid-template-columns: 1fr 1fr; gap: 12px; }
     .form-actions{ display:flex; gap:10px; justify-content: flex-end; margin-top: 14px; }
     .hint{ font-size: 12px; color: var(--muted); margin-top: 6px; }
-
-    @media (max-width: 980px){
-      .row{ grid-template-columns: 52px 132px 1fr 1fr 132px 150px; }
-    }
-    @media (max-width: 760px){
-      .row{ grid-template-columns: 44px 116px 1fr 1fr; grid-auto-rows: var(--input-h); }
-      .col-date{ grid-column: 1 / span 2; }
-      .col-amount{ grid-column: 3 / span 2; }
-    }
 
     #modal9-container .glass3d {
       background: rgba(255, 255, 255, 0.05);
@@ -199,6 +170,34 @@
     3.9px 4.4px 6.6px -1.7px hsl(205 20% 10% / 0.1), 
     6.5px 7.2px 10.9px -2.1px hsl(205 20% 10% / 0.1), 
     8px 9px 14px -2.5px hsl(205 20% 10% / 0.2);
+    }
+
+    /* Стили контейнера строк */
+    .list-card{
+      height: var(--list-h); overflow-y: auto; overscroll-behavior: contain;
+      border: 1px solid var(--border); border-radius: var(--radius-sm); background: rgba(20, 24, 30, 0.55);
+    }
+    .row{
+      display:grid; grid-template-columns: 64px 160px 1fr 1fr 160px 180px;
+      gap: 10px; padding: 10px 12px; align-items:center; border-bottom: 1px dashed var(--border);
+    }
+    .row.head{
+      position: sticky; top: 0; background: rgba(8,10,14,0.9); border-bottom: 1px solid var(--border);
+      z-index: 1; font-size: 12px; color: var(--muted); text-transform: uppercase; letter-spacing: .6px;
+    }
+    .field{
+      height: var(--input-h); border-radius: 10px; border: 1px solid var(--border);
+      background: rgba(255,255,255,0.06); color: var(--text); padding: 0 12px; font-size: 14px; outline: none;
+    }
+    .field[readonly]{ opacity:.85 }
+    .field.short{ text-align: center; }
+    @media (max-width: 980px){
+      .row{ grid-template-columns: 52px 132px 1fr 1fr 132px 150px; }
+    }
+    @media (max-width: 760px){
+      .row{ grid-template-columns: 44px 116px 1fr 1fr; grid-auto-rows: var(--input-h); }
+      .col-date{ grid-column: 1 / span 2; }
+      .col-amount{ grid-column: 3 / span 2; }
     }
     
   </style>
@@ -254,6 +253,18 @@
       </div>
     </div>
   </div>
+
+  <!-- ===== Шаблон строки операции ===== -->
+  <template id="recordRowTemplate">
+    <div class="row item">
+      <input class="field short" readonly title="№ п/п" />
+      <input class="field" readonly title="Пользователь" />
+      <input class="field" readonly title="Источник" />
+      <input class="field" readonly title="Категория" />
+      <input class="field col-date" readonly title="Дата" />
+      <input class="field col-amount" readonly title="Сумма" />
+    </div>
+  </template>
 
   <!-- ===== Модал создания ===== -->
   <div class="modal" id="modalCreate">
@@ -404,6 +415,7 @@
     function renderList(kind, rows){
       const listEl = (kind === "exp") ? document.getElementById('expList') : document.getElementById('incList');
       listEl.querySelectorAll('.row.item').forEach(n => n.remove());
+      const tpl = document.getElementById('recordRowTemplate');
       rows.forEach((r, idx)=>{
         const [no, user, source, category, date, amount] = [
           r[0] || (idx+1),
@@ -413,16 +425,14 @@
           r[4] || "",
           r[5] || ""
         ];
-        const row = document.createElement('div');
-        row.className = 'row item';
-        row.innerHTML = `
-          <input class="field short" value="${no}" readonly title="№ п/п"/>
-          <input class="field" value="${user}" readonly title="Пользователь"/>
-          <input class="field" value="${source}" readonly title="Источник"/>
-          <input class="field" value="${category}" readonly title="Категория"/>
-          <input class="field col-date" value="${fmtDateTime(date)}" readonly title="Дата"/>
-          <input class="field col-amount" value="${fmtAmount(amount)}" readonly title="Сумма"/>
-        `;
+        const row = tpl.content.firstElementChild.cloneNode(true);
+        const inputs = row.querySelectorAll('input');
+        inputs[0].value = no;
+        inputs[1].value = user;
+        inputs[2].value = source;
+        inputs[3].value = category;
+        inputs[4].value = fmtDateTime(date);
+        inputs[5].value = fmtAmount(amount);
         listEl.appendChild(row);
       });
     }
