--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     body{
       margin:0;
       font-family: 'Comfortaa', sans-serif;
-      font-size: calc(16px * var(--font-scale));
+      font-size: 22px;
       color: var(--text);
       background: #0b0f14;
       background-image: var(--bg-image-url);
@@ -64,8 +64,8 @@
       width: min(460px, 90vw); padding: 28px; background: var(--card-strong);
       border: 1px solid var(--border); border-radius: var(--radius); box-shadow: var(--shadow);
     }
-    .lock-title{ font-size: calc(20px * var(--font-scale)); margin: 0 0 10px 0; font-weight: 700; }
-    .lock-sub{ color: var(--muted); margin: 0 0 18px 0; font-size: calc(14px * var(--font-scale)); }
+    .lock-title{ font-size: 20px; margin: 0 0 10px 0; font-weight: 700; }
+    .lock-sub{ color: var(--muted); margin: 0 0 18px 0; font-size: 20px; }
      .pin-pad{ text-align:center; }
     .pin-input{
       width:100%;
@@ -75,7 +75,7 @@
       background: rgba(255,255,255,0.06);
       color: var(--text);
       padding:0 14px;
-      font-size: calc(32px * var(--font-scale));
+      font-size: 32px;
       outline:none;
       margin-bottom:18px;
     }
@@ -126,11 +126,11 @@
     }
     .brand{ display:flex; gap: 10px; align-items:center; font-weight: 800; letter-spacing: .5px; }
     .brand .tag{
-      color: var(--muted); font-weight: 600; font-size: calc(12px * var(--font-scale)); padding: 2px 8px;
+      color: var(--muted); font-weight: 600; font-size: 20px; padding: 2px 8px;
       border: 1px solid var(--border); border-radius: 999px; background: rgba(255,255,255,0.04);
     }
     .user-pill{
-      color: var(--muted); font-size: calc(13px * var(--font-scale)); border: 1px solid var(--border);
+      color: var(--muted); font-size: 20px; border: 1px solid var(--border);
       border-radius: 999px; padding: 6px 12px; background: rgba(255,255,255,0.03);
     }
 
@@ -138,7 +138,7 @@
     .tabs{ display:flex; gap:8px; padding: 12px 12px 2px 12px; }
     .tab{ padding: 10px 14px; border: 1px solid var(--border); border-radius: 10px; background: rgba(255,255,255,0.03); color: var(--muted); font-weight: 600; cursor: pointer; }
     .tab.active{ color: var(--text); background: rgba(255,255,255,0.08); }
-    .swipe-hint{ text-align:center; font-size: calc(12px * var(--font-scale)); color: var(--muted); padding: 6px 0 10px 0; }
+    .swipe-hint{ text-align:center; font-size: 20px; color: var(--muted); padding: 6px 0 10px 0; }
 
     .pages{ position: relative; width: 200%; display: flex; transition: transform .35s ease; }
     .page{ width: 50%; padding: 14px; box-sizing: border-box; }
@@ -153,10 +153,10 @@
         border: 1px solid var(--border); border-radius: var(--radius); box-shadow: var(--shadow);
         max-height: 90vh; overflow-y: auto;
       }
-    .modal-title{ margin: 0 0 12px 0; font-size: calc(18px * var(--font-scale)); font-weight: 800; }
+    .modal-title{ margin: 0 0 12px 0; font-size: 24px; font-weight: 800; }
     .grid{ display:grid; grid-template-columns: 1fr 1fr; gap: 12px; }
     .form-actions{ display:flex; gap:10px; justify-content: flex-end; margin-top: 14px; }
-    .hint{ font-size: calc(12px * var(--font-scale)); color: var(--muted); margin-top: 6px; }
+    .hint{ font-size: 20px; color: var(--muted); margin-top: 6px; }
 
     #modal9-container .glass3d {
       background: rgba(255, 255, 255, 0.05);
@@ -184,11 +184,11 @@
     }
     .row.head{
       position: sticky; top: 0; background: rgba(8,10,14,0.9); border-bottom: 1px solid var(--border);
-      z-index: 1; font-size: calc(12px * var(--font-scale)); color: var(--muted); text-transform: uppercase; letter-spacing: .6px;
+      z-index: 1; font-size: 20px; color: var(--muted); text-transform: uppercase; letter-spacing: .6px;
     }
     .field{
       height: var(--input-h); border-radius: 10px; border: 1px solid var(--border);
-      background: rgba(255,255,255,0.06); color: var(--text); padding: 0 12px; font-size: calc(14px * var(--font-scale)); outline: none;
+      background: rgba(255,255,255,0.06); color: var(--text); padding: 0 12px; font-size: 20px; outline: none;
     }
     .field[readonly]{ opacity:.85 }
     .field.short{ text-align: center; }
@@ -229,7 +229,7 @@
         <div class="tab active" id="tab-exp">EXPENSE</div>
         <div class="tab" id="tab-inc">INCOME</div>
         <div style="flex:1"></div>
-        <div style="color:var(--muted); font-size: calc(13px * var(--font-scale));"> <b id="statusText">…</b></div>
+        <div style="color:var(--muted); font-size: 20px;"> <b id="statusText">…</b></div>
       </div>
 
       <div class="pages" id="pages">
@@ -237,7 +237,7 @@
         <section class="page" id="page-exp">
           <div class="actions">
             <button class="btn" id="createExpBtn">create an expense</button>
-            <div style="color:var(--muted); font-size: calc(13px * var(--font-scale));">sub page: <b>EXPENSE</b></div>
+            <div style="color:var(--muted); font-size: 20px;">sub page: <b>EXPENSE</b></div>
           </div>
           <div class="list-card" id="expList">
           </div>
@@ -246,7 +246,7 @@
         <section class="page" id="page-inc">
           <div class="actions">
             <button class="btn" id="createIncBtn">create an income</button>
-            <div style="color:var(--muted); font-size: calc(13px * var(--font-scale));">sub page: <b>INCOME</b></div>
+            <div style="color:var(--muted); font-size: 20px;">sub page: <b>INCOME</b></div>
           </div>
           <div class="list-card" id="incList">
           </div>
